--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,14 @@
 [tox]
-envlist = py{27,34,35,36}
+envlist = py{27,30,33,34,35,36}
 
 [testenv]
-# basepython =
-#     py27: python2.7
-#     py34: python3.4
-#     py35: python3.5
-#     py36: python3.6
 deps =
     check-manifest
     readme_renderer
     flake8
     pytest
 commands =
-    check-manifest --ignore .gitlab-ci.yml,tox.ini,tests*
+    check-manifest --ignore .gitlab-ci.yml,.python-version,tox.ini,tests*
     python setup.py check -m -r -s
     flake8 .
     pytest
