Re-Add the `pyenv` statements to the before_script
Re-add the `pyenv` initialization calls before continuing to execute and
test python code, since it could still fail because the environment has
not been started properly.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
 image: sonna/python-tox-test-env
 
 before_script:
+  - export PATH="/root/.pyenv/bin:$PATH"
+  - eval "$(pyenv init -)"
+  - eval "$(pyenv virtualenv-init -)"
   - pip install -r requirements.txt
   - pip install --upgrade virtualenv
   - pip install tox
