--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     flake8
     pytest
 commands =
-    check-manifest --ignore .gitlab-ci.yml,.python-version,tox.ini,tests*
+    check-manifest --ignore .gitlab-ci.yml,.python-version,Dockerfile,tox.ini,tests*
     python setup.py check -m -r -s
     flake8 .
     pytest
